<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>1.20.3MCForge</groupId>
  <artifactId>1.20.3MCForge</artifactId>
  <version>0.0.1-SNAPSHOT</version>
 <build>
  <plugins>
    <!-- other plugins omitted -->
    <plugin>
      <artifactId>maven-jar-plugin</artifactId>
      <version>2.4</version>
      <configuration>
        <archive>
          <manifestEntries>
            <Premain-Class>asbestosstar.FCAgent</Premain-Class>
                        <Can-Retransform-Classes>true</Can-Retransform-Classes>
            <Can-Redefine-Classes>true</Can-Redefine-Classes>
          </manifestEntries>
        </archive>
      </configuration> 
    </plugin>
  </plugins>
</build>
 <properties>
 	<maven.compiler.target>17</maven.compiler.target>
 	 	<maven.compiler.source>17</maven.compiler.source>
 	 	<fcdependencies.dir>${user.home}/fcdependencies/1.20.3MCForge</fcdependencies.dir>  
 </properties>
 
   <repositories>
    <repository>
      <id>MCForge</id>
      <name>MCForge</name>
      <url>https://maven.minecraftforge.net/</url>
    </repository>
    <repository>
      <id>Minecraft</id>
      <name>Minecraft</name>
      <url>https://libraries.minecraft.net</url>
    </repository>
    <repository>
      <id>TLauncher</id>
      <name>TLauncher</name>
      <url>http://res.tlauncher.org</url>
    </repository>  
  </repositories>
 
   <dependencies>
 	<dependency>
 		<groupId>org.javassist</groupId>
 		<artifactId>javassist</artifactId>
 		<version>3.30.2-GA</version>
 	</dependency>
 	
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
 		<artifactId>asm</artifactId>
 		<version>9.6</version>
 	</dependency>
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
 		<artifactId>asm-analysis</artifactId>
 		<version>9.6</version>
 	</dependency>
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
 		<artifactId>asm-commons</artifactId>
 		<version>9.6</version>
 	</dependency>
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
 		<artifactId>asm-tree</artifactId>
 		<version>9.6</version>
 	</dependency>
 	<dependency>
 		<groupId>org.ow2.asm</groupId>
 		<artifactId>asm-util</artifactId>
 		<version>9.6</version>
 	</dependency>









<!-- https://mvnrepository.com/artifact/net.minecraftforge/eventbus -->
<dependency>
    <groupId>net.minecraftforge</groupId>
    <artifactId>eventbus</artifactId>
    <version>6.2.0</version>
</dependency>

 	<dependency>
 		<groupId>ca.weblite</groupId>
 		<artifactId>java-objc-bridge</artifactId>
 		<version>1.1</version>
 	</dependency>
 	<dependency>
 		<groupId>com.github.oshi</groupId>
 		<artifactId>oshi-core</artifactId>
 		<version>6.4.10</version>
 	</dependency>
 	<dependency>
 		<groupId>com.google.guava</groupId>
 		<artifactId>failureaccess</artifactId>
 		<version>1.0.1</version>
 	</dependency>
 	<dependency>
 		<groupId>com.google.code.gson</groupId>
 		<artifactId>gson</artifactId>
 		<version>2.10.1</version>
 	</dependency>
 	<dependency>
 		<groupId>com.ibm.icu</groupId>
 		<artifactId>icu4j</artifactId>
 		<version>73.2</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>authlib</artifactId>
 		<version>6.0.52</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>blocklist</artifactId>
 		<version>1.0.10</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>brigadier</artifactId>
 		<version>1.2.9</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>datafixerupper</artifactId>
 		<version>6.0.8</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>logging</artifactId>
 		<version>1.1.1</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>patchy</artifactId>
 		<version>2.2.10</version>
 	</dependency>
 	<dependency>
 		<groupId>com.mojang</groupId>
 		<artifactId>text2speech</artifactId>
 		<version>1.17.9</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-codec</groupId>
 		<artifactId>commons-codec</artifactId>
 		<version>1.16.0</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
 		<version>2.13.0</version>
 	</dependency>
 	<dependency>
 		<groupId>commons-logging</groupId>
 		<artifactId>commons-logging</artifactId>
 		<version>1.2</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-buffer</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-codec</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-common</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-handler</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-resolver</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-transport-classes-epoll</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-transport-native-unix-common</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
 		<artifactId>netty-transport</artifactId>
 		<version>4.1.97.Final</version>
 	</dependency>
 	<dependency>
 		<groupId>it.unimi.dsi</groupId>
 		<artifactId>fastutil</artifactId>
 		<version>8.5.12</version>
 	</dependency>
 	<dependency>
 		<groupId>net.java.dev.jna</groupId>
 		<artifactId>jna-platform</artifactId>
 		<version>5.14.0</version>
 	</dependency>
 	<dependency>
 		<groupId>net.java.dev.jna</groupId>
 		<artifactId>jna</artifactId>
 		<version>5.14.0</version>
 	</dependency>
 	<dependency>
 		<groupId>net.sf.jopt-simple</groupId>
 		<artifactId>jopt-simple</artifactId>
 		<version>5.0.4</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-compress</artifactId>
 		<version>1.26.0</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
 		<version>3.13.0</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.httpcomponents</groupId>
 		<artifactId>httpclient</artifactId>
 		<version>4.5.13</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.httpcomponents</groupId>
 		<artifactId>httpcore</artifactId>
 		<version>4.4.16</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-api</artifactId>
 		<version>2.22.1</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-core</artifactId>
 		<version>2.22.1</version>
 	</dependency>
 	<dependency>
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-slf4j2-impl</artifactId>
 		<version>2.22.1</version>
 	</dependency>
 	<dependency>
 		<groupId>org.jcraft</groupId>
 		<artifactId>jorbis</artifactId>
 		<version>0.0.17</version>
 	</dependency>
 	<dependency>
 		<groupId>org.joml</groupId>
 		<artifactId>joml</artifactId>
 		<version>1.10.5</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-freetype</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-jemalloc</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-openal</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-opengl</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-stb</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl-tinyfd</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>org.lwjgl</groupId>
 		<artifactId>lwjgl</artifactId>
 		<version>3.3.3</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>modlauncher</artifactId>
 		<version>10.1.2</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>fmlcore</artifactId>
 		<version>1.20.4-49.0.50</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>javafmllanguage</artifactId>
 		<version>1.20.4-49.0.50</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>lowcodelanguage</artifactId>
 		<version>1.20.4-49.0.50</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>mclanguage</artifactId>
 		<version>1.20.4-49.0.50</version>
 	</dependency>
 	<dependency>
 		<groupId>net.minecraftforge</groupId>
 		<artifactId>fmlloader</artifactId>
 		<version>1.20.4-49.0.50</version>
 	</dependency>
 	<dependency>
 		<groupId>org.spongepowered</groupId>
 		<artifactId>mixin</artifactId>
 		<version>0.8.5</version>
 	</dependency>


        <!-- 添加本地 JAR 文件作为依赖 -->  
        <dependency>  
            <groupId>your.custom.group.id</groupId>  
            <artifactId>fci</artifactId>  
            <version>1.0.0</version> <!-- 可以是任意版本号，但最好是有意义的 -->  
            <scope>system</scope>  
            <systemPath>${fcdependencies.dir}/fci.jar</systemPath>  
        </dependency> 

 	
 </dependencies>
</project>
